Fix z-index on KG elements

--- a/app/ui/src/Pages/Project/pages/KG/components/KGVisualization/SectionList/SectionList.module.scss
+++ b/app/ui/src/Pages/Project/pages/KG/components/KGVisualization/SectionList/SectionList.module.scss
@@ -8,8 +8,12 @@
   z-index: 1;
   width: 33 * $grid-unit;
 
-  &:hover {
+  &.opened {
     z-index: 2;
+  }
+
+  &:hover {
+    z-index: 999;
   }
 }
 
